--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ main {
     font-weight: 400; /* Slightly bolder thought text */
     color: #F5F5DC; /* Beige Thought Text Color */
     font-size: 1em; /* Increased thought text size */
+    overflow-wrap: break-word; /* ADDED:  Allows long words to break and wrap */
 }
 
 footer {
